...
        <scene sceneID="q5n-nc-vpa">
            <objects>
                <tableViewController title="Records" id="tAn-l3-lNz" customClass="RecordsViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="H4q-Zf-tDe">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
        <scene sceneID="fSc-fO-32A">
            <objects>
                <viewController storyboardIdentifier="AddRecord" title="Add Record" id="mhR-ed-4MB" customClass="AddRecordViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="dMN-jX-yGV">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilW-zH-z7f">
                                                    <rect key="frame" x="52" y="11.5" width="83" height="20.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="pX3-5b-mLI"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lsh-Zj-94i" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Edit" id="mMM-Qg-MuX">
                                <connections>
                                    <action selector="editPressed:" destination="Gcm-GR-U5t" id="Zem-oS-aVs"/>
...
        <scene sceneID="diZ-Sl-XJg">
            <objects>
                <tableViewController title="Dashboard" id="cXW-z4-hvK" customClass="DashboardViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Ri2-Eo-wcm">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Budget" id="Tq2-aM-5hm">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="fCD-EP-vsp">
                            <connections>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Start Now!">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
        <scene sceneID="gdh-in-d6h">
            <objects>
                <viewController storyboardIdentifier="DisplayRecord" title="Record" id="6m0-OF-8L1" customClass="DisplayRecordViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="35b-Ly-JuM">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
